# discord-cli

./: README.md  README_CN.md  SKILL.md  pyproject.toml
.github/workflows/: publish.yml
src/discord_cli/: client.py  db.py
